--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Cool First Webpage</title>
     <link href="base.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
   </head>
-  <body>
+  <body class=""works_on_smartphone">
    
     <header>
       <ul>
